# tds

./: CMakeLists.txt  LICENSE  README.md  atomic.lua  cdefs.lua  elem.lua  env.lua  hash.c  hash.lua  init.lua  tds.def  tds_atomic_counter.c  tds_atomic_counter.h  tds_elem.c  tds_elem.h  tds_hash.c  tds_hash.h  tds_utils.c  tds_utils.h  tds_vec.c  tds_vec.h  vec.lua
rocks/: tds-scm-1.rockspec
test/: bench-hash-tensor.lua  bench-hash.lua  bench-vec.lua  test_atomic.lua
